...
            ),
          );
  }

  Widget settingsMenu(Color iconColor) {
    return IconButton(
      key: const Key('settingsMenu'),
      icon: const Icon(Icons.settings),
      color: iconColor,
      iconSize: 35,
      onPressed: () {
        Navigator.push(
          context,
...
      },
    );
  }

  Widget optionsMenu(Color iconColor) {
    return TextButton(
      key: const Key('optionsMenu'),
      onPressed: () {
        showDialog(
          context: context,
          builder: (BuildContext context) {
            return AlertDialog(
              content: Column(
...
                    onPressed: () {
                      Navigator.pop(context);
                      showDialog(
                        context: context,
                        builder: (BuildContext context) {
                          return AlertDialog(
                            title: const Text("Block User"),
                            content: const Text(
                                "Are you sure you want to block this user?"),
                            actions: [
                              TextButton(
                                onPressed: () {
                                  Navigator.pop(context);
                                },
                                child: const Text("Cancel"),
                              ),
                              TextButton(
                                key: const Key('blockUserButton'),
                                onPressed: () {
                                  FirebaseFirestore.instance
                                      .collection('users')
                                      .doc(user.uid)
                                      .update({
                                    'blockedUsers':
...
                              mainAxisSize: MainAxisSize.min,
                              children: [
                                const Text(
                                    "Please provide a reason for reporting this user"),
                                const SizedBox(height: 10),
                                TextField(
                                  key: const Key('reportUserReason'),
                                  controller: reportController,
                                  decoration: const InputDecoration(
                                    border: OutlineInputBorder(),
                                    labelText: 'Reason',
                                  ),
                                ),
...
                                onPressed: () {
                                  Navigator.pop(context);
                                },
                                child: const Text("Cancel"),
                              ),
                              TextButton(
                                key: const Key('reportUserButton'),
                                onPressed: () {
                                  FireStoreMethods().reportUser(userData['uid'],
                                      reportController.text, context);

                                  CustomSnackBar.showSnackBar(
                                      context, 'User reported');
...
