...
                    headerText: "Sign in to your account",
                    headerSize: 20,
                    headerColor: const Color(0xffa09f9f),
                  ),
                  SizedBox(height: MediaQuery.of(context).size.height * 0.15),
                  CustomTextFormField(
                    key: const Key('loginEmail'),
                    textController: _email,
                    headingText: "Email",
                    validatorFunction: (email) =>
                        email != null && !EmailValidator.validate(email.trim())
                            ? 'Invalid email'
                            : null,
...
                            ThemeMode.dark
                        ? Colors.white
                        : const Color(0xff141B41),
                  ),
                  SizedBox(height: MediaQuery.of(context).size.height * 0.07),
                  CustomPasswordFormField(
                    key: const Key('loginPass'),
                    textColor: Provider.of<ThemeProvider>(context).themeMode ==
                            ThemeMode.dark
                        ? Colors.white
                        : const Color(0xff141B41),
                    textController: _password,
                    headingText: "Password",
...
                    obscureTextBool: obscureText,
                  ),
                  SizedBox(height: MediaQuery.of(context).size.height * 0.01),
                  buildForgotPassword(context),
                  SizedBox(height: MediaQuery.of(context).size.height * 0.16),
                  CustomTextButton(
                    key: const Key('loginButton'),
                    buttonBorderRadius: BorderRadius.circular(30),
                    buttonFunction: loginUser,
                    buttonText: "Login",
                  ),
                ],
              ),
...
