...
                                  .doc(user.uid)
                                  .update({
                                'blockedUsers': blockedUsers,
                              });
                            },
                            child: Container(
                              key: const Key('removeBlockedUserButton'),
                              padding: const EdgeInsets.all(5),
                              decoration: BoxDecoration(
                                color: Colors.red,
                                borderRadius: BorderRadius.circular(5),
                                boxShadow: const [
                                  BoxShadow(
...
